--- a/views/setting.ejs
+++ b/views/setting.ejs
@@ -139,7 +139,7 @@
           </div>
           <div class="col-6">
             <div class="mb-3">
-              <label for="total_quantity" class="form-label"
+              <label for="allow_order" class="form-label"
                 >Allows per order</label
               >
               <input
@@ -242,7 +242,7 @@
       let settingDetail;
       socket.emit("setting-data", settingDetail);
       socket.on("setting-data-getted", function (data) {
-        console.log("datadatadata", data);
+        localStorage.setItem("entry-time", data[0].setting_data[0].entry_time);
         document.getElementById("exit_bn_loss").value =
           data[0].setting_data[0].exit_bn_loss;
         document.getElementById("exit_bn_profit").value =
@@ -255,23 +255,13 @@
           data[0].setting_data[0].auto_repeat === 0 ? false : true;
         document.getElementById("s1name").value = data[1].str_value[0].name;
         document.getElementById("s2name").value = data[1].str_value[1].name;
-        console.log(
-          "data[0].setting_data[0].strike_price",
-          data[0].setting_data[0].strike_price > 0,
-          data[0].setting_data[2].strike_price > 0
-        );
+
         let firstlegValue = data[0].setting_data[0].strike_price > 0 ? "+" : "";
         let secondlegValue =
           data[0].setting_data[1].strike_price > 0 ? "+" : "";
         let thirdlegValue = data[0].setting_data[2].strike_price > 0 ? "+" : "";
         let forthlegValue = data[0].setting_data[3].strike_price > 0 ? "+" : "";
-        console.log(
-          "hello values",
-          firstlegValue,
-          secondlegValue,
-          thirdlegValue,
-          forthlegValue
-        );
+
         document.getElementById("s1l1").value =
           data[0].setting_data[0].buy_sell +
           " " +
@@ -324,6 +314,8 @@
           data[0].setting_data[2].legs_id;
         document.getElementById("leg4_id").value =
           data[0].setting_data[3].legs_id;
+        document.getElementById("allow_order").value =
+          data[0].setting_data[0].allow_order;
         document.getElementById("total_quantity").value =
           data[0].setting_data[0].total_quantity;
         if (data[0].setting_data[0].order_type === "MARKET") {
