--- a/views/style/styles.ejs
+++ b/views/style/styles.ejs
@@ -69,7 +69,27 @@
   .profitTd {
     color: red;
   }
-  /* .total-part-section th {
-    text-align: right;
+  /* @media screen and (max-width: 700px) {
+    .sidebar-main {
+      width: 100%;
+      height: auto;
+      position: relative;
+    }
+    .sidebar-main a {
+      float: left;
+    }
+    div.content {
+      margin-left: 0;
+    }
   } */
+
+  /* @media screen and (max-width: 400px) {
+    .sidebar-main a {
+      text-align: center;
+      float: none;
+    }
+  } */
+  /* .total-part-section th {
+      text-align: right;
+    } */
 </style>
