--- a/views/MarketOrderInformation.ejs
+++ b/views/MarketOrderInformation.ejs
@@ -586,11 +586,11 @@
         var min = moment.utc(endTime?.diff(startTime)).format("mm");
         var sec = moment.utc(endTime?.diff(startTime)).format("ss");
         document.getElementById("Strategieswatch").innerText = [
-          hrs,
-          min,
-          sec,
+          hrs !== "Invalid date"? hrs : "00",
+          min !== "Invalid date"? min : "00",
+          sec !== "Invalid date"? sec : "00",
         ].join(":");
-        console.log("qtyS1qtyS1qtyS1qtyS1qtyS1", qtyS1, qtyS2);
+        console.log("qtyS1qtyS1qtyS1qtyS1qtyS1", hrs, min, sec);
         document.getElementById("pnlq").innerText = isNaN(
           ((totalprofitCount + totalprofitCount1) * 25).toFixed(2)
         )
