responsive ui in  setting page

--- a/views/layouts/web.ejs
+++ b/views/layouts/web.ejs
@@ -17,38 +17,30 @@
   </head>
   <body>
     <div class="container-fluid">
-      <div class="row flex-nowrap">
-        <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 sidebar-main">
-          <div
-            class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100"
-          >
-            <a
-              href="/"
-              class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none"
-            >
-              <span class="fs-5 d-none d-sm-inline">Menu</span>
-            </a>
-            <ul
-              class="nav nav-pills sidebar-ul flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start"
-              id="menu"
-            >
-              <li class="nav-item">
-                <a href="/" class="nav-link align-middle px-0">
-                  <i class="fs-4 bi-house"></i>
-                  <span class="ms-1 d-none d-sm-inline">Setting</span>
-                </a>
-              </li>
+      <div class="main-wraper">
+        <div class="sidebar-main">
+          <ul class="nav nav-pills sidebar-ul" id="menu">
+            <li class="nav-item">
+              <a href="/" class="nav-link align-middle px-0">
+                <span class="fs-5 d-sm-inline">Menu</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="/" class="nav-link align-middle px-0">
+                <i class="fs-4 bi-house"></i>
+                <span class="ms-1 d-sm-inline">Setting</span>
+              </a>
+            </li>
 
-              <li class="nav-item">
-                <a onclick="check()" class="nav-link px-0 align-middle">
-                  <i class="fs-4 bi-table"></i>
-                  <span class="ms-1 d-none d-sm-inline">Market live</span></a
-                >
-              </li>
-            </ul>
-          </div>
+            <li class="nav-item">
+              <a onclick="check()" class="nav-link px-0 align-middle">
+                <i class="fs-4 bi-table"></i>
+                <span class="ms-1 d-sm-inline">Market live</span></a
+              >
+            </li>
+          </ul>
         </div>
-        <div class="col py-3"><%- body %></div>
+        <div class="main-content"><%- body %></div>
       </div>
     </div>
     <!-- <div class="container"></div> -->
