--- a/views/setting.ejs
+++ b/views/setting.ejs
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
     <link rel="stylesheet" href="setting.css" />
   </head>
   <body>
@@ -23,7 +19,7 @@
         <input type="hidden" id="leg3_id" name="leg3_id" />
         <input type="hidden" id="leg4_id" name="leg4_id" />
         <div class="row">
-          <div class="col-6">
+          <div class="col-sm-6">
             <div class="mb-3">
               <label for="exit_bn_loss" class="form-label"
                 >Exit BN moment (Minus)</label
@@ -38,7 +34,7 @@
               />
             </div>
           </div>
-          <div class="col-6">
+          <div class="col-sm-6">
             <div class="mb-3">
               <label for="exit_bn_profit" class="form-label"
                 >Exit BN moment (Plus)</label
@@ -53,7 +49,7 @@
               />
             </div>
           </div>
-          <div class="col-6">
+          <div class="col-sm-6">
             <div class="mb-3">
               <label for="entry_time" class="form-label">Entry time</label>
               <input
@@ -66,7 +62,7 @@
               />
             </div>
           </div>
-          <div class="col-6">
+          <div class="col-sm-6">
             <div class="mb-3">
               <label for="exit_time" class="form-label">Max exit time</label>
               <input
@@ -79,7 +75,7 @@
               />
             </div>
           </div>
-          <div class="col-6">
+          <div class="col-sm-6">
             <div class="mb-3">
               <br />
               <input
@@ -94,7 +90,7 @@
               >
             </div>
           </div>
-          <div class="col-6">
+          <div class="col-sm-6">
             <div class="mb-3">
               <label for="total_quantity" class="form-label"
                 >Lots per leg</label
@@ -108,7 +104,7 @@
               />
             </div>
           </div>
-          <div class="col-6">
+          <div class="col-sm-6">
             <div class="mb-3">
               <label for="order_type" class="form-label">Order type</label>
               <input
@@ -137,7 +133,7 @@
               />
             </div>
           </div>
-          <div class="col-6">
+          <div class="col-sm-6">
             <div class="mb-3">
               <label for="allow_order" class="form-label"
                 >Allows per order</label
@@ -154,7 +150,7 @@
         </div>
 
         <div class="row">
-          <div class="col-6">
+          <div class="col-sm-6">
             <div class="mb-3">
               <label for="s1name" class="form-label">Strategy name 1</label>
               <input
@@ -167,7 +163,7 @@
               />
             </div>
           </div>
-          <div class="col-6">
+          <div class="col-sm-6">
             <div class="mb-3">
               <label for="s2name" class="form-label">Strategy name 2</label>
               <input
@@ -179,7 +175,7 @@
               />
             </div>
           </div>
-          <div class="col-6">
+          <div class="col-sm-6">
             <div class="mb-3">
               <label for="s1l1" class="form-label">Strategy 1 leg 1</label>
               <input
@@ -192,19 +188,19 @@
             </div>
           </div>
 
-          <div class="col-6">
+          <div class="col-sm-6">
             <div class="mb-3">
               <label for="s2l1" class="form-label">Strategy 2 leg 1 </label>
               <input type="text" id="s2l1" name="s2l1" class="form-control" />
             </div>
           </div>
-          <div class="col-6">
+          <div class="col-sm-6">
             <div class="mb-3">
               <label for="s1l2" class="form-label">Strategy 1 leg 2</label>
               <input type="text" id="s1l2" name="s1l2" class="form-control" />
             </div>
           </div>
-          <div class="col-6">
+          <div class="col-sm-6">
             <div class="mb-3">
               <label for="s2l2" class="form-label">Strategy 2 leg 2 </label>
               <input type="text" id="s2l2" name="s2l2" class="form-control" />
