--- a/views/style/styles.ejs
+++ b/views/style/styles.ejs
@@ -69,6 +69,24 @@
   .profitTd {
     color: red;
   }
+  .main-wraper {
+    position: relative;
+  }
+  .sidebar-main {
+    background: #141414;
+    position: fixed;
+    left: 0;
+    height: 100vh;
+    top: 0;
+    width: 220px;
+  }
+  .main-content {
+    width: calc(100% - 220px);
+    margin-left: auto;
+  }
+  .sidebar-ul {
+    padding: 0 16px;
+  }
   /* @media screen and (max-width: 700px) {
     .sidebar-main {
       width: 100%;
@@ -92,4 +110,26 @@
   /* .total-part-section th {
       text-align: right;
     } */
+  @media screen and (max-width: 767px) {
+    .sidebar-main {
+      height: auto;
+      width: 100%;
+    }
+    .sidebar-ul {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      gap: 30px;
+      padding: 0 30px;
+    }
+
+    .nav-item {
+      width: auto;
+    }
+    .main-content {
+      width: 100%;
+      margin-left: inherit;
+      padding-top: 50px;
+    }
+  }
 </style>
